射线检测过滤器配置